chore: test coverage